tests/NormalTests/paczka1/fuzzy1/63746951.err
Error in line 1: S154 S818 81,5
Error in line 24: zj859x A52 14,7
Error in line 9: nl1iTbl0IY S818 66,2
Error in line 29: nl1iTbl0IY A352 31,5
Error in line 25: S154 A352 2,0
Error in line 31: jhIYyKvIzQS S154 88,1
